--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Home
 	<p class="copyright">&copy;{{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
 	<script type="text/javascript">
             var AvaamoChatBot=function(t){function o(t,o){var n=document.createElement("script");n.setAttribute("src",t),n.onload=o,document.body.appendChild(n)}return this.options=t||{},this.load=function(t){o(this.options.url,function(){window.Avaamo.addFrame(),t&&"function"==typeof(t)&&t(window.Avaamo)})},this};
-            var chatBox = new AvaamoChatBot({url: 'http://97e46cc6.ngrok.io/web_channels/bd8d9a1d-f42b-4213-91b8-1482f3177bd4?banner=true&banner_text=+&banner_title=This+is+how+chat+bot+shows+up&demo=true&theme=avm-blue'});
+            var chatBox = new AvaamoChatBot({url: 'http://97e46cc6.ngrok.io/web_channels/bd8d9a1d-f42b-4213-91b8-1482f3177bd4?banner=true&banner_text=+&banner_title=This+is+how+chat+bot+shows+up&demo=true&theme=avm-blue&ForOrigin=jbmyid.github.io'});
             chatBox.load();
           </script>
 </footer>
