--- a/index.html
+++ b/index.html
@@ -37,5 +37,15 @@ title: Home
 </div>
 <footer class="clean" style="background-image: url({{ site.cover }}); background-position: bottom; height: 60px;">
 	<p class="copyright">&copy;{{ site.time | date: "%Y" }}, <a href="{{ site.copyright.url }}" target="_blank">{{ site.copyright.author }}</a>. <a href="{{ site.copyright.type_url }}" target="_blank">{{ site.copyright.type_title }}</a>.</p>
-	
+	<script type="text/javascript">
+		var url = "https://c6.avaamo.com/web_channels/b1cbe4c9-280a-449e-9880-37cf39926c06?action=demo&banner=true&banner_text=+&banner_title=This+is+how+the+chat+agent+shows+up&controller=web_channels&demo=true&theme=avm-messenger";
+		
+		if(!localStorage.useruid){
+			localStorage.setItem('user_uid',  Math.random().toString(36).substring(2, 15) + Math.random().toString(36).substring(2, 15))
+		}
+		url = url + "&user_uid="+localStorage.useruid;
+            var AvaamoChatBot=function(t){function o(t,o){var n=document.createElement("script");n.setAttribute("src",t),n.setAttribute("id","avm-web-channel"),n.onload=o,document.body.appendChild(n)}return this.options=t||{},this.load=function(t){o(this.options.url,function(){window.Avaamo.addFrame(),t&&"function"==typeof(t)&&t(window.Avaamo)})},this};
+              var chatBox = new AvaamoChatBot({url: url});
+            chatBox.load();
+          </script>
 </footer>
