--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Home
 		if(!localStorage.useruid){
 			localStorage.setItem('user_uid',  Math.random().toString(36).substring(2, 15) + Math.random().toString(36).substring(2, 15))
 		}
-		url = url + "&user_uid="+localStorage.useruid;
+		url = url + "&user_uid="+localStorage.user_uid;
             var AvaamoChatBot=function(t){function o(t,o){var n=document.createElement("script");n.setAttribute("src",t),n.setAttribute("id","avm-web-channel"),n.onload=o,document.body.appendChild(n)}return this.options=t||{},this.load=function(t){o(this.options.url,function(){window.Avaamo.addFrame(),t&&"function"==typeof(t)&&t(window.Avaamo)})},this};
               var chatBox = new AvaamoChatBot({url: url});
             chatBox.load();
